<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Cinco_HomePageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="262dp"
        android:background="@drawable/background5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fotoperfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profilepic" />

        <ImageView
            android:id="@+id/ic_notificacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="@+id/fotoperfil"
            app:layout_constraintTop_toBottomOf="@+id/fotoperfil"
            app:srcCompat="@drawable/notifications__icon" />

        <TextView
            android:id="@+id/txt_inicio_pghome"
            style="@style/txt_blanco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/inicio"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/saludopg5"
            style="@style/txt_blanco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:alpha="0.5"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_inicio_pghome" />

        <TextView
            android:id="@+id/txt_balancetotal"
            style="@style/txt_blanco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/balance_total"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saludopg5" />

        <TextView
            android:id="@+id/textView5"
            style="@style/txt_blanco"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/_124_57"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_balancetotal" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/btn_enviar_homepg"


                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/enviar_dinero"

                android:backgroundTint="@color/verde"
                style="@style/Widget.Material3.Button.TonalButton.Icon"
                app:icon="@drawable/icono_enviar"
                android:fontFamily="@font/jua"
                android:textSize="14sp"

                />

            <Button
                android:id="@+id/btn_ingresar_homepg"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/ingresar_dinero"

                android:backgroundTint="@color/celeste"
                style="@style/Widget.Material3.Button.Icon"
                app:icon="@drawable/icono_ingresar"

                android:fontFamily="@font/jua"
                android:textColor="@color/white"
                android:textSize="14sp"/>
        </LinearLayout>

        <TextView
            style="@style/label_negro"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ultimas_transacciones" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="348dp"
            android:orientation="vertical" />

<!--        <ScrollView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="vertical" >-->

<!--                <ImageView-->
<!--                    android:id="@+id/imageView"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    app:srcCompat="@drawable/grp2"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:layout_marginTop="10dp"/>-->

<!--                <ImageView-->
<!--                    android:id="@+id/imageView5"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    app:srcCompat="@drawable/grp1"-->
<!--                    android:layout_marginTop="32dp"/>-->
<!--            </LinearLayout>-->
<!--        </ScrollView>-->


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>